--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Brick broker</title>
+
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <h1>Hello :P</h1>
+    <canvas id="myCanvas" width="480" height="320"></canvas>
 </body>
+<script type="text/javascript" src="index.js"></script>
 </html>
